Fixes mobile layout + a few other things - Fixes mobile layout   - Makes titles slightly smaller to prevent overflow on small displays   - Replaces some padding causing shifting - Fixes scroll arrow in light-mode - Adds slight background to projects in light-mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,8 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* Tailwind doesn't have this even though it should... */
+.justify-stretch {
+  justify-content: stretch;
+}
